<resources>
    <string name="app_name">Tofi</string>
    <string name="title_dashboard">Buscar</string>


    <string name="title_login">MyLoginScreen</string>
    <string name="title_home">Inicio</string>
    <string name="title_catalogo">Catálogo</string>
    <string name="title_coleccionables">Coleccionables</string>
    <string name="title_medallas">Medallas</string>
    <string name="title_notifications">Biblioteca</string>
    <string name="title_actividades">Actividades</string>
    <string name="title_perfil">Perfil</string>
    <string name="pronunciacion">Pronunciacion</string>
    <string name="deletreo">Deletreo</string>
    <string name="principito">Principito</string>
    <string name="dumbo">Dumbo</string>
    <string name="title_fantasia">Fantasia</string>
    <string name="historias">Historias</string>

    <string name="all">TODO</string>
    <string name="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quas illo eaque maiores reprehenderit, molestiae aliquid reiciendis natus.</string>
    <string name="subtitle">Lorem ipsum dolor sit consectur.</string>



    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="prompt_user">Nombre</string>
    <string name="prompt_email">Correo electronico</string>
    <string name="prompt_password">Repetir contraseña</string>
    <string name="email">Correo electronico</string>
    <string name="numero">12</string>
    <string name="nuevaContrasena">Nueva contraseña</string>
    <string name="configuraperfil">Configura tu perfil</string>
    <string name="tema">Elige tus temas favoritos</string>

    <string name="sinopsis_principito">El principito es una narración corta del escritor francés Antoine de Saint-Exupéry, que trata de la historia de un pequeño príncipe que parte de su asteroide a una travesía por el universo, en la cual descubre la extraña forma en que los adultos ven la vida y comprende el valor del amor y la amistad.</string>
</resources>